Changelog:

Version 0.99.9.5
 - Fix Game Crash due to Mission invocation
 - Fix Heavy Plasma Manufacture unlock error
 - Fix Wrong Deathsound for all Female Civilians
 - Fix Typos for Weaponlists
 - Fix Typos in extraSprites
 - Fix Position of Magadan City
 - Adjust all Shotguns to behave like proper Ones
 - Add Fire Extinguisher Item
 - Add Armed Civilian to Terrorsites
 - Add Army Soldiers to Military Bases
 - Add TerrainHint DayNightIndicator
 - Add Stun, Burn and Bleeding Indicators for Battlescape
 - Add Avatars and TinyRanks for Battlescape
 - Add OXCE Enemy Preview Background
 - Add OXCE Armor Preview for Craft Equip Screen
 - Add OXCE Tank/Drone Preview for Craft Equip Screen
 - Add SoldierNames and SoldierCountryFlags
 - Add Inventory images for all Civilians
 - Add Inventory images for all Aliens
 - Add Inventory images for all Tanks


Version 0.99.9.4
 - Fix Infiltration base prevention, if Battleship Attack successful
 - Fix Alloy Drone Taser Sprite Background
 - Fix Alloy Drone Scout Weapon Range
 - Fix Hovertank Smokeweapon Clipsize
 - Fix SellPrice for Alloy Cannon Craftweapon
 - Fix BuyPrice Drone Scout
 - Fix Infiltration UFO's attempting to land on water point sites
 - Fix Plasma Weapons needing both clips being researched for manufacture
 - Adjust UFO air/landed score
 - Adjust Enhanced Power Armor Bonuses
 - Add Taser Pistol Elerium Clip Animations
 - Add support Hoverdrones for X-Com
 - Add direct fire smoke acts as fire extinguisher (Smoke Grenades don't)

Version 0.99.9.3
 - Research tree Overwork so everything fits better
 - Fix Bug for Mod not loading on OXCE 7.7.x+
 - Fix Plasma Blade not being available in lategame to player
 - Fix Mars Terrain Height (4 -> 8)
 - Fix globe texture asignment, which prevented Terrorsites from spawning properly
 - Fix missing Adv. Medikit Dependency
 - Fix PLasma Pistol/Rifle Clip sell prices
 - Fix Walkertank/Laser upgrade pricing
 - Rebalance lategame enemy PSI DEF