@@ -179,6 +179,7 @@ commendations:
         - [1, ["STR_SILACOID", "STR_LIVE_TERRORIST", "FACTION_HOSTILE", "STATUS_DEAD"]]
         - [1, ["STR_CYBERDISC", "STR_LIVE_TERRORIST", "FACTION_HOSTILE", "STATUS_DEAD"]]
         - [1, ["STR_CHRYSSALID", "STR_LIVE_TERRORIST", "FACTION_HOSTILE", "STATUS_DEAD"]]
+        - [1, ["STR_ZOMBIE", "STR_LIVE_TERRORIST", "FACTION_HOSTILE", "STATUS_DEAD"]]
         - [1, ["STR_CELATID", "STR_LIVE_TERRORIST", "FACTION_HOSTILE", "STATUS_DEAD"]]
         - [1, ["STR_MUTON_BERSERKER", "STR_LIVE_TERRORIST", "FACTION_HOSTILE", "STATUS_DEAD"]]
         - [1, ["STR_ARMORED_CYBERDISC", "STR_LIVE_TERRORIST", "FACTION_HOSTILE", "STATUS_DEAD"]]
@@ -187,7 +188,7 @@ commendations:
         - [1, ["STR_HOLODRONE", "STR_LIVE_TERRORIST", "FACTION_HOSTILE", "STATUS_DEAD"]]
         - [1, ["STR_ARMORED_SECTOPOD", "STR_LIVE_TERRORIST", "FACTION_HOSTILE", "STATUS_DEAD"]]
         - [1, ["STR_CHRYSSALID_SPITTER", "STR_LIVE_TERRORIST", "FACTION_HOSTILE", "STATUS_DEAD"]]
-        - [1, ["STR_ZOMBIE", "STR_LIVE_TERRORIST", "FACTION_HOSTILE", "STATUS_DEAD"]]
+        - [1, ["STR_SPITTER_ZOMBIE", "STR_LIVE_TERRORIST", "FACTION_HOSTILE", "STATUS_DEAD"]]
   - type: STR_MEDAL_BASE_DEFENDER
     description: STR_MEDAL_BASE_DEFENDER_DESCRIPTION
     sprite: 12
@@ -330,7 +331,7 @@ commendations:
       killsWithCriteriaCareer: [1, 2, 3, 3, 3, 3, 4, 4, 4, 4]
     killCriteria:
       -
-        - [1, ["FACTION_HOSTILE", "STATUS_TURNING"]]
+        - [1, ["BT_PSIAMP", "FACTION_HOSTILE", "STATUS_TURNING"]]
   - type: STR_MEDAL_NIGHT_TERRORMISSION_COUNT
     description: STR_MEDAL_NIGHT_TERRORMISSION_COUNT_DESCRIPTION
     sprite: 34
@@ -364,7 +365,7 @@ commendations:
       killsWithCriteriaCareer: [1, 2, 3, 3, 3, 3, 4, 4, 4, 4]
     killCriteria:
       -
-        - [1, ["FACTION_HOSTILE", "STATUS_PANICKING"]]
+        - [1, ["BT_PSIAMP", "FACTION_HOSTILE", "STATUS_PANICKING"]]
   - type: STR_MEDAL_REACTIONFIRE
     description: STR_MEDAL_REACTIONFIRE_DESCRIPTION
     sprite: 40
